<resources>
    <string name="app_name">Ham Feed</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="action_leave">Leave</string>
    <string name="action_send">Send</string>
    <string name="prompt_message">Message</string>

    <string name="error_connect">Failed to connect</string>

    <!-- messages -->
    <string name="message_welcome">Welcome to Ham Feed –</string>
    <plurals name="message_participants">
        <item quantity="one">there\'s %d participant</item>
        <item quantity="other">there are %d participants</item>
    </plurals>
    <string name="message_user_joined">%s joined</string>
    <string name="message_user_left">%s left</string>
    <string name="user_action_typing">is typing</string>

    <!-- -->
    <string name="username">USER</string>
    <string name="filename">FILE</string>
    <string name="timestamp">TIMESTAMP</string>

    <!-- image slide -->
    <string name="product_name">Product Name</string>
    <string name="txt_image_slider">Image Slideshow</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="time_out">Time Out</string>
    <string name="error_occured">Error Occurred</string>
    <string name="prompt_reply">Comment</string>
    <string name="space">\u00A0</string>

    <string name="indicate_username">USER:</string>
    <string name="indicate_filename">FILE:</string>
    <string name="indicate_timestamp">TIMESTAMP:</string>
    <string name="last_update">LAST UP:</string>
    <string name="WEB">WEB</string>
    <string name="magnify">MAG</string>
    <string name="modify">FIX</string>

    <string name="action_clear">Clear</string>
    <string name="action_save">Save</string>
    <string name="action_change_white">WHITE</string>
    <string name="action_change_red">RED</string>
    <string name="action_change_blue">BLUE</string>

</resources>
