<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_clear"
        android:orderInCategory="100"
        android:title="@string/action_clear"/>
    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:title="@string/action_save"/>
    <item
        android:id="@+id/action_change_white"
        android:orderInCategory="100"
        android:title="@string/action_change_white"/>
    <item
        android:id="@+id/action_change_red"
        android:orderInCategory="100"
        android:title="@string/action_change_red"/>
    <item
        android:id="@+id/action_change_blue"
        android:orderInCategory="100"
        android:title="@string/action_change_blue"/>
</menu>